Añadir emisor de eventos
Tiempo aprox: 30 minutos
